2021-05-05
- Release 1.6.23

2021-04-28
- Fix potential FreeNode without valid Node in nfpcapd.

2021-04-21
- Add all non TCP/UDP IP protocols as streams in nfpcapd

2021-04-20
- Add mpls unwrap in nfpcapd. Skip MPLS labels
- Add ESP to processed protocols in nfpcapd.
- Some Code cleanup 

2021-04-10
- Change spin lock to native C11 lock
- Cleanup code for issue #283

2021-04-09
- Fix minor nfpcapd issues
- Add mpls unwrap in sflow code - adds mpls labels if available

2021-03-12
- Update rbtree.
- Fix potential deadlock in nfpcapd if it terminates.

2021-03-06
- Add packet capture buffer size to nfpcapd

2021-02-20
- Fix sflow code extended field parsing. #262 and #273
- Fix endless loop of nfexpire, if it does not find files

2021-01-30
- Fix processing deoding error for yaf exporter
- Zero out tcp flags for non TCP records

2021-01-16
- Add reverse element enterprise ID 29305 for counter values
- Add biFlow direction element 239
- Add flow end reason element 136
- Make -Tall the default for nfcapd to collect extensions

2020-12-22
- Code cleanup and boundary checks in option template processing

2020-12-19
- Implement element 160 (SystemInitTime) in option template

2020-12-19
- Add Element 160 (SystemInitTime) in flow record used by Huawei

2020-12-05
- Fix path handling for -l <dir>
- Fix print plain numbers #263

2020-11-21
- Release 1.6.22

2020-10-18
- Fix nfreplay v5 time shift bug

2020-10-17
- add support for >=, <= comparators. #256. Thanks to piorek94
- Fix yacc/bison warnings. Cleanup unused tokens
- Fix syntax error 'flags AS' as AS is a reserved word. #255
- Add element 139 for ICMP type/code in IPv6. #250
- Fix IPv4/IPv6 statistics representation #252

2020-09-12
- Cleanup nip/xip filter syntax. Add filter syntax 'nip in [ <iplist>]'. Request #246

2020-09-03
- Add nfversion to nfpcapd

2020-08-31
- Add collected netflow/sflow version in nfdump record. Request #242
- Fix GuessDir bug - issue #215

2020-08-02